2012-09-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in (distclean): Add as rule to remove files generated by
	configure.

2012-08-08  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* README.user: Added new section on compliance With ISO/IEC TR 24732,
	the C++ DFP Draft Technical Report, including instructions on how to
	use (ios::fixed | ios::scientific) as ios_base::fmtflags in order to
	get fully encoded precision in output string representation.

2012-08-07  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* tests/test-printf.c: Add missing 'D' to a/A conv tests.
	* tests/scaffold.c: Correct comments for _OSC and added a/A support.
	* tests/test-ostream.cpp: Modified expectations such that a/A ignores
	precision and always uses the num of significant digits in the
	mantissa when output.
	* tests/test-ostream-g-spec.cpp: Removed unnecessary define that used
	to be used to get g/G support.
	* dfp/decimal/decimal (FIND_DEC_MANT_DIG): Remove ".*" from default
	string string.
	(LIBDFP_META): Make g/G spec default. Enable a/A spec by checking
	flags for ios::fixed | ios::scientific. Condense uppercase/lowercase
	check. Don't call printf with a precision specifier if a/A is the
	desires spec conv.

2012-07-27  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* tests/test-negate.c: New testcase.
	* Makefile.in (libdfp_c_tests): Add test-negate.

2012-07-27  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
	* Makefile.in (test-printf.os, test-strtod.os): New rules to depend on
	printf_dfp.os and strtod[32|64|128].os respectively.
	* strtod128.c (__DEC_MANT_DIG__, __DEC_MAX_EXP__, __DEC_MIN_EXP__):
	Define to _Decimal128 values.
	* tests/test-strtod.c: Added tests near __DEC*_MAX_EXP__ and
	__DEC*_MIN_EXP__.
	* strtod64.c (__DEC_MANT_DIG__, __DEC_MAX_EXP__, __DEC_MIN_EXP__):
	Define to _Decimal64 values.
	* sysdeps/powerpc/dfpu/numdigits.h (left_justify): Fix VSX case by
	replacing xxlxor with xxlor insn.
	(getexp): Replace stfwix with stfd to prevent erroneous sign extend.