@@ -1,3 +1,12 @@
+2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* config.guess: Add powerpc LE support.
+	* configure.ac: Likewise.
+	* scripts/config.guess: Likewise.
+	* configure: Likewise.
+	* sysdeps/powerpc/powerpc64/sysdep.h: Sync with GLIBC one for powerpc
+	LE support.
+
 2012-09-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
 
 	* Makefile.in (distclean): Add as rule to remove files generated by
